# nau

./: .gitignore  CMakeLists.txt
Lightning/: todo.txt
nau/nauSettings/: nauSystem.mlib
nau/src/nau/render/: pass.h
plugins/lightning/: CMakeLists.txt  generator.cpp  generator.hpp  lightning.cpp  lightning.hpp  zone.hpp
plugins/lightning/src/: branches.cpp  branches.hpp  lightning.cpp  lightning.hpp  lsys.cpp  lsys.hpp  mainbranch.cpp  mainbranch.hpp  scol.cpp  scol.hpp
plugins/passGeometry/src/: passGeometry.cpp
projects/Lightning 2/: branchpoints.mlib  lighting.mlib  lightning.xml
projects/Lightning 2/shaders/: blend.frag  blur.frag  branchBlend.frag  branchColor.frag
projects/Lightning Main/: branchpoints.mlib  lightning.xml  waypoints.txt
projects/Lightning Main/shaders/: blend.frag  blend.vert  blur.frag  dilation.frag  hBlur.frag  vBlur.frag
projects/Lightning3/: branchpoints.mlib  branchpoints.txt  lightning.xml  waypoints.txt
projects/Lightning3/shaders/: blend.frag  branchColor.frag
projects/MipMap/: branchpoints.txt  lighting.mlib  lightning.xml  readme.txt
projects/MipMap/shaders/: blend.frag  mainBlur.frag
projects/No MipMap/: lightning.xml
projects/No MipMap/shaders/: blend.frag
projects/No Strobe/: branchpoints.txt  lighting.mlib  lightning.xml  waypoints.mlib  waypoints.txt
projects/Vanilla/: lighting.mlib  lightning.xml
projects/plugin passLightningSimple/: branchpoints.txt  lighting.mlib  lightning.xml  waypoints.txt
projects/simple Lightning/: branchpoints.txt  lighting.mlib  lightning.xml  readme.txt  waypoints.txt
(+28 files in other folders)
